--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@
   border-radius: 10px;
   position: relative;
 }
+.poke-card-background .poke-card .energy-ball {
+  height: 25px;
+  width: 27px;
+}
 .poke-card-background .poke-card .poke-pic {
   height: 120px;
   width: 220px;
@@ -37,6 +41,11 @@
   margin-top: -12px;
   font-size: 7px;
   text-align: center;
+  border: 3px solid;
+  background-color: lightgray;
+  border-color: lightgray;
+  border-radius: 20px 5px 20px 5px;
+  box-shadow: 2px 1px 3px 0px;
 }
 .poke-card-background .poke-card .poke-name-and-pv-number {
   display: flex;
@@ -71,8 +80,5 @@
 .poke-card-background .poke-card .poke-name-and-pv-number .pv-number {
   display: flex;
   align-items: center;
-}
-.poke-card-background .poke-card .poke-name-and-pv-number .pv-number .energy-ball {
-  height: 25px;
-  width: 27px;
+  font-weight: bold;
 }/*# sourceMappingURL=style.css.map */
