--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,12 @@
         border-radius: 10px;
         position: relative;
 
+        .energy-ball {
+        
+            height: 25px;
+            width: 27px;
+        }
+
         .poke-pic {
 
             height: 120px;
@@ -39,6 +45,11 @@
             margin-top: -12px;
             font-size: 7px;
             text-align: center;
+            border: 3px solid;
+            background-color: lightgray;
+            border-color: lightgray;
+            border-radius: 20px 5px 20px 5px;
+            box-shadow: 2px 1px 3px 0px;
         }
 
         .poke-name-and-pv-number {
@@ -81,12 +92,7 @@
 
                 display: flex;
                 align-items: center;
-
-                .energy-ball {
-        
-                    height: 25px;
-                    width: 27px;
-                }
+                font-weight: bold;
             }
            
         }
