--- a/style.css
+++ b/style.css
@@ -11,13 +11,13 @@
   justify-content: center;
   align-items: center;
   width: 260px;
-  height: 330px;
+  height: 360px;
   border-radius: 10px;
 }
 .poke-card-background .poke-card {
   background-color: rgb(161, 70, 161);
-  height: 310px;
-  width: 240px;
+  height: 340px;
+  width: 242px;
   border-radius: 10px;
   position: relative;
 }
@@ -25,22 +25,39 @@
   display: flex;
   align-items: center;
   gap: 15px;
-  margin-top: -10px;
+  justify-content: space-between;
+  margin-right: 10px;
+  margin-bottom: -10px;
 }
 .poke-card-background .poke-card .attack-poke .energy-balls-attack {
   display: flex;
   align-items: center;
+  gap: 2px;
+  margin-left: 5px;
 }
 .poke-card-background .poke-card .attack-poke .name-attack, .poke-card-background .poke-card .attack-poke .damage-attack {
   font-weight: bold;
 }
-.poke-card-background .poke-card .energy-ball {
-  height: 25px;
-  width: 27px;
+.poke-card-background .poke-card .attack-info {
+  display: flex;
+  font-size: 11px;
+  margin-top: -15px;
+  margin-left: 7px;
+  gap: 3px;
 }
-.poke-card-background .poke-card .colorless-energy-ball {
-  height: 14px;
+.poke-card-background .poke-card .energy-ball {
+  height: 15px;
   width: 15px;
+  border: 1px solid;
+  border-color: white;
+  border-radius: 100%;
+}
+.poke-card-background .poke-card .small-energy-ball {
+  height: 10px;
+  width: 10px;
+  border: 1px solid;
+  border-color: white;
+  border-radius: 100%;
 }
 .poke-card-background .poke-card .poke-pic {
   height: 120px;
@@ -98,4 +115,60 @@
   display: flex;
   align-items: center;
   font-weight: bold;
+}
+.poke-card-background .poke-card .weakness-and-retire-infos {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+.poke-card-background .poke-card .weakness-and-retire-infos .additionnal-info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 10px;
+  width: 105px;
+  font-size: 7px;
+  border: 3px solid;
+  background-color: lightgray;
+  border-color: lightgray;
+  border-radius: 5px;
+  box-shadow: 2px 1px 3px 0px;
+  gap: 20px;
+}
+.poke-card-background .poke-card .weakness-and-retire-infos .additionnal-info .info-weakness, .poke-card-background .poke-card .weakness-and-retire-infos .additionnal-info .info-resist, .poke-card-background .poke-card .weakness-and-retire-infos .additionnal-info .info-retire {
+  display: flex;
+  align-items: center;
+}
+.poke-card-background .poke-card .bottom-card-infos {
+  display: flex;
+  width: 100%;
+  gap: 12px;
+}
+.poke-card-background .poke-card .bottom-card-infos .rarity-and-author {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+}
+.poke-card-background .poke-card .bottom-card-infos .rarity-and-author .author-card {
+  font-size: 8px;
+  font-weight: bold;
+}
+.poke-card-background .poke-card .bottom-card-infos .rarity-and-author .rarity-card {
+  display: flex;
+  width: 18px;
+  height: 18px;
+  margin-top: -7px;
+  margin-left: -4px;
+}
+.poke-card-background .poke-card .bottom-card-infos .ex-rule {
+  display: flex;
+  width: 50%;
+  height: 30px;
+  font-size: 8px;
+  background-color: goldenrod;
+  border: 1px solid;
+}
+.poke-card-background .poke-card .bottom-card-infos .ex-rule .ex-rule-title {
+  background-color: black;
+  color: goldenrod;
 }/*# sourceMappingURL=style.css.map */
