--- a/style.scss
+++ b/style.scss
@@ -177,14 +177,13 @@
                 margin-left: 10px;
     
                 .author-card {
-                    font-size: 8px;
+                    font-size: 7px;
                     font-weight: bold;
                 }
     
                 .rarity-card {
                     display: flex;
-                    width: 18px;
-                    height: 18px;
+                    height: 15px;
                     margin-top: -7px;
                     margin-left: -4px;
                 }
@@ -197,6 +196,7 @@
                 font-size: 8px;
                 background-color: goldenrod;
                 border: 1px solid;
+                margin-top: 10px;
 
                 .ex-rule-title {
                     background-color: black;
